# stm32-gcc-threadx

./: CMakeLists.txt  README.md
CMSIS/Device/ST/STM32L4xx/Config/: stm32l4xx_gcc.ld
CMSIS/Device/ST/STM32L4xx/Source/: system_stm32l4xx.c
CMSIS/Device/ST/STM32L4xx/Source/gcc/: startup_stm32l4xx.c
ThreadX/ports/cortex_m4/gnu/example_build/: cortexm4_crt0.S  cortexm4_vectors.S  sample_threadx.c  sample_threadx.ld  tx_initialize_low_level.S
ThreadX/ports/cortex_m4/gnu/src/: tx_misra.S
User/include/: clock_config.h  gpio_config.h  interrupt.h
User/source/: clock_config.c  gpio_config.c  interrupt.c  main.c
User/source/threadx/: cortexm4_crt0.S  cortexm4_vectors.S  threadx.ld  tx_initialize_low_level.S
